Attempt fix for transition on mobile

--- a/public/main.css
+++ b/public/main.css
@@ -2,35 +2,36 @@
 @tailwind components;
 @tailwind utilities;
 
-/* @layer components { */
-/*   .to-scroll { */
-/*     opacity: 0; */
-/*     transform: translateY(10%); */
-/*     transition: all .5s; */
-/*   } */
-/**/
-/*   .delay-1 { */
-/*     transition-delay: 200ms; */
-/*   } */
-/**/
-/*   .delay-2 { */
-/*     transition-delay: 400ms; */
-/*   } */
-/**/
-/*   .delay-3 { */
-/*     transition-delay: 600ms; */
-/*   } */
-/**/
-/*   .delay-4 { */
-/*     transition-delay: 800ms; */
-/*   } */
-/**/
-/*   .delay-5 { */
-/*     transition-delay: 1000ms; */
-/*   } */
-/**/
-/*   .show { */
-/*     opacity: 1; */
-/*     transform: translateY(0); */
-/*   } */
-/* } */
+@layer components {
+  .to-scroll {
+    opacity: 0;
+    transform: translateY(10%);
+    transition: .5s;
+    transition-property: transform, filter;
+  }
+
+  .delay-1 {
+    transition-delay: 20ms;
+  }
+
+  .delay-2 {
+    transition-delay: 40ms;
+  }
+
+  .delay-3 {
+    transition-delay: 60ms;
+  }
+
+  .delay-4 {
+    transition-delay: 80ms;
+  }
+
+  .delay-5 {
+    transition-delay: 100ms;
+  }
+
+  .show {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
